# rnr.cli

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  rnr  rnr.cmd  rnr.yaml
.github/workflows/: build.yml  contributors.yml  integration-test.yml  release.yml
.rnr/: config.yaml
src/: cli.rs  config.rs  main.rs  platform.rs  rnr_config.rs  runner.rs
src/commands/: init.rs  list.rs  mod.rs  upgrade.rs
tests/fixtures/basic/: rnr.yaml
tests/fixtures/nested/: rnr.yaml
tests/fixtures/nested/subproject/: rnr.yaml
tests/fixtures/steps/: rnr.yaml
